chore: add .tasks/ directory to .gitignore
